Fix null-element test setup in PixelProgramServiceImplTest